[hotfix] fix logo align

--- a/src/scss/5_components/_block-starterx.scss
+++ b/src/scss/5_components/_block-starterx.scss
@@ -1,4 +1,4 @@
-#block-starterx {
+.block-starterx {
   &-branding {
     margin-right: auto;
   }
